--- a/.github/workflows/internal-dead-links.yml
+++ b/.github/workflows/internal-dead-links.yml
@@ -17,12 +17,13 @@ jobs:
         with:
           hugo-version: "latest"
       - name: Run hugo
-        run: cd qdrant-landing && hugo -b 'https://qdrant.tech/'
+        run: cd qdrant-landing && hugo -b ''
       - name: Link Checker
         id: lychee
+        working-directory: qdrant-landing/public
         uses: lycheeverse/lychee-action@v1.8.0
         with:
-          args: --offline qdrant-landing/public
+          args: --offline --base . .
           fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
