fix link checker CI (#677)
* fix link checker CI

* fix link checker CI

* fix missing image preview

--- a/.github/workflows/internal-dead-links.yml
+++ b/.github/workflows/internal-dead-links.yml
@@ -17,12 +17,12 @@ jobs:
         with:
           hugo-version: "latest"
       - name: Run hugo
-        run: cd qdrant-landing && hugo -b 'https://qdrant.tech/'
+        run: cd qdrant-landing && hugo -b ''
       - name: Link Checker
         id: lychee
         uses: lycheeverse/lychee-action@v1.8.0
         with:
-          args: --offline qdrant-landing/public
+          args: --offline --base qdrant-landing/public qdrant-landing/public
           fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
