--- a/.lycheeignore
+++ b/.lycheeignore
@@ -2,6 +2,6 @@ https://qdrant.to/twitter
 https://fonts.gstatic.com/
 https://twitter.com/intent.*
 https://www.linkedin.com/sharing.*
-file://.*
 http://localhost.*
 https://fonts.googleapis.com/
+admin/emails/*
