--- a/.github/workflows/internal-dead-links.yml
+++ b/.github/workflows/internal-dead-links.yml
@@ -17,12 +17,14 @@ jobs:
         with:
           hugo-version: "latest"
       - name: Run hugo
-        run: cd qdrant-landing && hugo -b ''
+        run: |
+          cd qdrant-landing && hugo --gc -b 'http://localhost:1313' && hugo serve &
+          sleep 5 # wait for server to start
       - name: Link Checker
         id: lychee
         uses: lycheeverse/lychee-action@v1.8.0
         with:
-          args: --offline --base qdrant-landing/public qdrant-landing/public
+          args: --max-redirects 0 --exclude '.*' --include 'http://localhost:1313/.*' qdrant-landing/public/
           fail: true
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
