--- a/qdrant-landing/themes/qdrant-2024/package.json
+++ b/qdrant-landing/themes/qdrant-2024/package.json
@@ -20,6 +20,7 @@
       "@babel/preset-env": "project",
       "copy-webpack-plugin": "project",
       "prettier": "project",
+      "prettier-plugin-go-template": "project",
       "webpack": "project",
       "webpack-cli": "project"
     }
@@ -32,6 +33,7 @@
     "@babel/preset-env": "^7.23.9",
     "copy-webpack-plugin": "^12.0.2",
     "prettier": "^3.2.5",
+    "prettier-plugin-go-template": "^0.0.15",
     "webpack": "^5.90.1",
     "webpack-cli": "^5.1.4"
   },
