--- a/qdrant-landing/themes/qdrant-2024/.prettierrc.json
+++ b/qdrant-landing/themes/qdrant-2024/.prettierrc.json
@@ -1,4 +1,15 @@
 {
   "singleQuote": true,
-  "printWidth": 120
+  "printWidth": 120,
+  "plugins": ["prettier-plugin-go-template"],
+  "overrides": [
+    {
+      "files": [
+        "*.html"
+      ],
+      "options": {
+        "parser": "go-template"
+      }
+    }
+  ]
 }
