--- a/qdrant-landing/themes/qdrant-2024/.prettierrc.json
+++ b/qdrant-landing/themes/qdrant-2024/.prettierrc.json
@@ -4,9 +4,7 @@
   "plugins": ["prettier-plugin-go-template"],
   "overrides": [
     {
-      "files": [
-        "*.html"
-      ],
+      "files": ["*.html"],
       "options": {
         "parser": "go-template"
       }
