redirect for hybrid saas

--- a/netlify.toml
+++ b/netlify.toml
@@ -22,6 +22,13 @@ command = "cd qdrant-landing ; echo $HUGO_ENV ; hugo --gc --minify --buildFuture
         X-Frame-Options = "DENY"
 
 [[redirects]]
-from = "/surveys/hybrid-saas/"
-to = "https://hybrid-cloud.qdrant.tech/"
-status = 301
+    from = "/surveys/hybrid-saas"
+    to = "https://hybrid-cloud.qdrant.tech/"
+    status = 301
+    force = true
+
+[[redirects]]
+    from = "/surveys/hybrid-saas/"
+    to = "https://hybrid-cloud.qdrant.tech/"
+    status = 301
+    force = true
