--- a/qdrant-landing/themes/qdrant-2024/package.json
+++ b/qdrant-landing/themes/qdrant-2024/package.json
@@ -15,6 +15,7 @@
     "dependencies": {
       "@splidejs/splide": "project",
       "bootstrap": "project",
+      "clipboard": "project",
       "qdrant-page-search": "project"
     },
     "devDependencies": {
@@ -29,6 +30,7 @@
   "dependencies": {
     "@splidejs/splide": "^4.1.4",
     "bootstrap": "^5.3.2",
+    "clipboard": "^2.0.11",
     "qdrant-page-search": "^1.0.8"
   },
   "devDependencies": {
