--- a/qdrant-landing/package.json
+++ b/qdrant-landing/package.json
@@ -4,6 +4,7 @@
       "@splidejs/splide": "qdrant-2024",
       "anchor-js": "qdrant-2024",
       "bootstrap": "qdrant-2024",
+      "chart.js": "qdrant-2024",
       "clipboard": "qdrant-2024",
       "qdrant-page-search": "qdrant-2024"
     },
@@ -20,6 +21,7 @@
     "@splidejs/splide": "^4.1.4",
     "anchor-js": "^5.0.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "clipboard": "^2.0.11",
     "qdrant-page-search": "^1.0.8"
   },
