--- a/qdrant-landing/themes/qdrant-2024/package.json
+++ b/qdrant-landing/themes/qdrant-2024/package.json
@@ -16,6 +16,7 @@
       "@splidejs/splide": "project",
       "anchor-js": "project",
       "bootstrap": "project",
+      "chart.js": "project",
       "clipboard": "project",
       "qdrant-page-search": "project"
     },
@@ -32,6 +33,7 @@
     "@splidejs/splide": "^4.1.4",
     "anchor-js": "^5.0.0",
     "bootstrap": "^5.3.2",
+    "chart.js": "^4.4.2",
     "clipboard": "^2.0.11",
     "qdrant-page-search": "^1.0.8"
   },
