--- a/qdrant-landing/themes/qdrant-2024/package.json
+++ b/qdrant-landing/themes/qdrant-2024/package.json
@@ -14,6 +14,7 @@
   "comments": {
     "dependencies": {
       "@splidejs/splide": "project",
+      "anchor-js": "project",
       "bootstrap": "project",
       "clipboard": "project",
       "qdrant-page-search": "project"
@@ -29,6 +30,7 @@
   },
   "dependencies": {
     "@splidejs/splide": "^4.1.4",
+    "anchor-js": "^5.0.0",
     "bootstrap": "^5.3.2",
     "clipboard": "^2.0.11",
     "qdrant-page-search": "^1.0.8"
