--- a/.github/workflows/internal-dead-links.yml
+++ b/.github/workflows/internal-dead-links.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Setup Hugo
         uses: peaceiris/actions-hugo@v2
         with:
-          hugo-version: "v0.123.0"
+          hugo-version: "0.123.0"
       - name: Install npm
         uses: actions/setup-node@v2
         with:
