--- a/.github/workflows/check-dead-links.yml
+++ b/.github/workflows/check-dead-links.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           hugo-version: "latest"
       - name: Run hugo
-        run: cd qdrant-landing && hugo -b 'https://qdrant.tech/'
+        run: cd qdrant-landing && hugo -b 'https://qdrant.com/'
       - name: Link Checker
         id: lychee
         uses: lycheeverse/lychee-action@v1.9.1
