--- a/qdrant-landing/themes/qdrant/theme.toml
+++ b/qdrant-landing/themes/qdrant/theme.toml
@@ -2,7 +2,7 @@ name = "Qdrant"
 license = "MIT"
 licenselink = "https://github.com/yourname/yourtheme/blob/master/LICENSE"
 description = ""
-homepage = "https://qdrant.tech/"
+homepage = "https://qdrant.com/"
 tags = []
 features = []
 min_version = "0.41.0"
