--- a/netlify.toml
+++ b/netlify.toml
@@ -10,6 +10,7 @@ NODE_VERSION = "20.10.0"
 [context.production.environment]
 HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
+DEPLOY_PRIME_URL = "/"
 
 [context.deploy-preview.environment]
 HUGO_ENV = "staging"
