--- a/netlify.toml
+++ b/netlify.toml
@@ -10,7 +10,7 @@ NODE_VERSION = "20.10.0"
 [context.production.environment]
 HUGO_ENV = "production"
 HUGO_ENABLEGITINFO = "true"
-DEPLOY_PRIME_URL = "/"
+DEPLOY_PRIME_URL = "https://qdrant.tech"
 
 [context.deploy-preview.environment]
 HUGO_ENV = "staging"
